# libpcache

./: .clang-format  .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  README_COUNTER.md  benchmark.sh  build_repl.sh  format.sh  project.md  skills-lock.json  spec.md  spec_repl.md  test.sh
.claude/: settings.json
.github/workflows/: cmake-single-platform.yml
include/: libpcache.h  libpcache_errors.h  module.modulemap
misc/: ReleaseTemplate.md
repl/: .clang-format  CMakeLists.txt  README.md
repl/src/: cmd_check.cxx  cmd_close.cxx  cmd_defragment.cxx  cmd_delete.cxx  cmd_get.cxx  cmd_help.cxx  cmd_inspect.cxx  cmd_pages.cxx  cmd_put.cxx  cmd_set_max_pages.cxx  cmd_utils.cxx  cmd_utils.hxx  commands.cxx  commands.hxx  errors.cxx  errors.hxx  file_utils.cxx  file_utils.hxx  lexer.cxx  lexer.hxx  main.cxx  repl.hxx  runner.cxx  runner.hxx
repl/test/: test_repl.rb
src/: db.c  db.h  handle.c  handle.h  internal.h  libpcache.c  macros.h  maintenance.c  pages.c  pages_util.c  pages_util.h  volume.c
test_compilation_on_linux/: Dockerfile  build_and_test.sh
tests/: CMakeLists.txt  benchmark.c  benchmark_pcache.c  common.c  common.h  database_check.c  drafragmentation.c  edge_cases.c  elasticity.c  fifo_policy.c  fixed_policy.c  happy_path_multiple.c  happy_path_single.c  test_pcache.c  unitary.c
